--- a/book/_addons/language_redirect.html
+++ b/book/_addons/language_redirect.html
@@ -7,8 +7,9 @@
       var userLang = navigator.language || navigator.userLanguage;
       var langPrefix = userLang.split("-")[0];
       var supportedLangs = ["en", "ko"];
+      var siteURL = window.location.href.split('/index.html')[0] + '/';
       var targetLang = supportedLangs.includes(langPrefix) ? langPrefix : "en";
-      window.location.replace("/" + targetLang + "/");
+      window.location.replace(siteURL + targetLang + "/index.html");
     </script>
   </head>
   <body>
