--- a/book/_addons/giscus.html
+++ b/book/_addons/giscus.html
@@ -1,8 +1,8 @@
 <script src="https://giscus.app/client.js"
-        data-repo="entelecheia/nlp4ss"
-        data-repo-id="R_kgDOMTcakg"
+        data-repo="entelecheia/course-template-i18n"
+        data-repo-id="R_kgDOH-wD9A"
         data-category="Q&A"
-        data-category-id="DIC_kwDOMTcaks4Cgwzd"
+        data-category-id="DIC_kwDOH-wD9M4CWANU"
         data-mapping="pathname"
         data-strict="1"
         data-reactions-enabled="1"
